--- a/03_COMPAS_plots_comparisons.ipynb
+++ b/03_COMPAS_plots_comparisons.ipynb
@@ -555,6 +555,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "73e739e2",
+   "metadata": {},
+   "source": [
+    "## Time"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 34,
    "id": "3fc549c3",
@@ -706,46 +714,136 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 59,
    "id": "ad64a040",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.28659987449645996\n"
+     ]
+    },
+    {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>without_gen_div</th>\n",
+       "      <th>with_gen_div</th>\n",
+       "      <th>without_gen_div_entr</th>\n",
+       "      <th>with_gen_div_entr</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0.01</th>\n",
+       "      <td>0.512614</td>\n",
+       "      <td>3.076456</td>\n",
+       "      <td>0.424085</td>\n",
+       "      <td>1.915936</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.02</th>\n",
+       "      <td>0.561382</td>\n",
+       "      <td>2.456613</td>\n",
+       "      <td>0.336314</td>\n",
+       "      <td>1.061062</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.03</th>\n",
+       "      <td>0.303566</td>\n",
+       "      <td>0.968187</td>\n",
+       "      <td>0.313858</td>\n",
+       "      <td>0.990073</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.04</th>\n",
+       "      <td>0.305616</td>\n",
+       "      <td>0.768730</td>\n",
+       "      <td>0.289833</td>\n",
+       "      <td>0.787620</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.05</th>\n",
+       "      <td>0.267842</td>\n",
+       "      <td>0.585173</td>\n",
+       "      <td>0.316768</td>\n",
+       "      <td>1.487503</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.10</th>\n",
+       "      <td>0.295447</td>\n",
+       "      <td>0.494825</td>\n",
+       "      <td>0.579945</td>\n",
+       "      <td>0.986317</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.15</th>\n",
+       "      <td>0.239001</td>\n",
+       "      <td>0.465036</td>\n",
+       "      <td>0.243267</td>\n",
+       "      <td>0.433581</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.20</th>\n",
+       "      <td>0.450135</td>\n",
+       "      <td>0.338741</td>\n",
+       "      <td>0.277633</td>\n",
+       "      <td>0.372244</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "{'g$\\\\Delta$ base': {0.01: 0.5126140117645264,\n",
-       "  0.02: 0.5613818168640137,\n",
-       "  0.03: 0.30356597900390625,\n",
-       "  0.04: 0.3056161403656006,\n",
-       "  0.05: 0.26784205436706543,\n",
-       "  0.1: 0.29544711112976074,\n",
-       "  0.15: 0.23900103569030762,\n",
-       "  0.2: 0.4501347541809082},\n",
-       " 'g$\\\\Delta$ generalized': {0.01: 3.076456069946289,\n",
-       "  0.02: 2.4566128253936768,\n",
-       "  0.03: 0.9681870937347412,\n",
-       "  0.04: 0.7687301635742188,\n",
-       "  0.05: 0.5851728916168213,\n",
-       "  0.1: 0.4948253631591797,\n",
-       "  0.15: 0.46503615379333496,\n",
-       "  0.2: 0.33874082565307617}}"
+       "      without_gen_div  with_gen_div  without_gen_div_entr  with_gen_div_entr\n",
+       "0.01         0.512614      3.076456              0.424085           1.915936\n",
+       "0.02         0.561382      2.456613              0.336314           1.061062\n",
+       "0.03         0.303566      0.968187              0.313858           0.990073\n",
+       "0.04         0.305616      0.768730              0.289833           0.787620\n",
+       "0.05         0.267842      0.585173              0.316768           1.487503\n",
+       "0.10         0.295447      0.494825              0.579945           0.986317\n",
+       "0.15         0.239001      0.465036              0.243267           0.433581\n",
+       "0.20         0.450135      0.338741              0.277633           0.372244"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "info_plot"
+    "import pandas as pd\n",
+    "print(tree_discr_time)\n",
+    "df_a = pd.DataFrame(time_div[\"divergence_criterion\"])\n",
+    "df_a.columns = [f\"{c}_div\" for c in df_a.columns]\n",
+    "df_b = pd.DataFrame(time_div[\"entropy\"])\n",
+    "df_b.columns = [f\"{c}_entr\" for c in df_a.columns]\n",
+    "pd.concat([df_a, df_b], axis = 1)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "62fac688",
    "metadata": {},
-   "outputs": [],
    "source": []
   }
  ],
