--- a/05_gaussian-example-comparison-slice-finder-slice-line.ipynb
+++ b/05_gaussian-example-comparison-slice-finder-slice-line.ipynb
@@ -906,7 +906,7 @@
     "\n",
     "type_experiment = \"one_at_time\"\n",
     "\n",
-    "type_criterion = \"weighted_sum_abs_reference_s\"\n",
+    "type_criterion = \"divergence_criterion\"\n",
     "\n",
     "\n",
     "generalization_dict, discretizations = tree_discr.get_tree_discretization(\n",
