--- a/wine-dataset-all.ipynb
+++ b/wine-dataset-all.ipynb
@@ -263,7 +263,7 @@
    },
    "outputs": [],
    "source": [
-    "metric = \"d_fpr\""
+    "metric = \"d_error\""
    ]
   },
   {
@@ -278,7 +278,7 @@
    },
    "outputs": [],
    "source": [
-    "type_criterion=\"divergence_criterion\"\n",
+    "type_criterion='entropy' #\"divergence_criterion\"\n",
     "\n",
     "type_experiment = \"one_at_time\""
    ]
@@ -316,8 +316,195 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "71ca493e",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-12-23T13:35:46.948732Z",
+     "start_time": "2022-12-23T13:35:46.925275Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fixed acidity\n",
+      " root s=1.00000 --> d_error=0.00000\n",
+      "         fixed acidity<=7.8 s=0.88812 --> d_error=-0.00129\n",
+      "                 fixed acidity<=6.4 s=0.32156 --> d_error=0.00120\n",
+      "                         fixed acidity<=6.1 s=0.18640 --> d_error=0.00221\n",
+      "                         fixed acidity>6.1 s=0.13516 --> d_error=-0.00021\n",
+      "                 fixed acidity>6.4 s=0.56656 --> d_error=-0.00270\n",
+      "                         fixed acidity<=6.6 s=0.10535 --> d_error=-0.01337\n",
+      "                         fixed acidity>6.6 s=0.46121 --> d_error=-0.00026\n",
+      "                                 fixed acidity<=6.8 s=0.11107 --> d_error=-0.00428\n",
+      "                                 fixed acidity>6.8 s=0.35014 --> d_error=0.00101\n",
+      "                                         fixed acidity<=7.2 s=0.17987 --> d_error=0.00285\n",
+      "                                         fixed acidity>7.2 s=0.17027 --> d_error=-0.00092\n",
+      "         fixed acidity>7.8 s=0.11188 --> d_error=0.01024\n",
+      "\n",
+      "volatile acidity\n",
+      " root s=1.00000 --> d_error=0.00000\n",
+      "         volatile acidity<=0.365 s=0.85321 --> d_error=-0.00167\n",
+      "                 volatile acidity<=0.3 s=0.68620 --> d_error=-0.00014\n",
+      "                         volatile acidity<=0.245 s=0.41343 --> d_error=-0.00297\n",
+      "                                 volatile acidity<=0.2 s=0.22846 --> d_error=-0.00101\n",
+      "                                         volatile acidity<=0.175 s=0.11290 --> d_error=-0.00265\n",
+      "                                         volatile acidity>0.175 s=0.11556 --> d_error=0.00059\n",
+      "                                 volatile acidity>0.2 s=0.18497 --> d_error=-0.00538\n",
+      "                         volatile acidity>0.245 s=0.27276 --> d_error=0.00415\n",
+      "                                 volatile acidity<=0.27 s=0.14373 --> d_error=0.00457\n",
+      "                                 volatile acidity>0.27 s=0.12903 --> d_error=0.00367\n",
+      "                 volatile acidity>0.3 s=0.16701 --> d_error=-0.00798\n",
+      "         volatile acidity>0.365 s=0.14679 --> d_error=0.00972\n",
+      "\n",
+      "citric acid\n",
+      " root s=1.00000 --> d_error=0.00000\n",
+      "         citric acid<=0.36 s=0.69600 --> d_error=-0.00358\n",
+      "                 citric acid<=0.25 s=0.20069 --> d_error=0.00096\n",
+      "                 citric acid>0.25 s=0.49530 --> d_error=-0.00542\n",
+      "                         citric acid<=0.29 s=0.19192 --> d_error=-0.00893\n",
+      "                         citric acid>0.29 s=0.30339 --> d_error=-0.00320\n",
+      "                                 citric acid<=0.32 s=0.15598 --> d_error=0.00039\n",
+      "                                 citric acid>0.32 s=0.14741 --> d_error=-0.00700\n",
+      "         citric acid>0.36 s=0.30400 --> d_error=0.00819\n",
+      "                 citric acid<=0.48 s=0.18885 --> d_error=0.01063\n",
+      "                 citric acid>0.48 s=0.11515 --> d_error=0.00419\n",
+      "\n",
+      "residual sugar\n",
+      " root s=1.00000 --> d_error=0.00000\n",
+      "         residual sugar<=1.4 s=0.17211 --> d_error=0.00841\n",
+      "         residual sugar>1.4 s=0.82789 --> d_error=-0.00175\n",
+      "                 residual sugar<=13.2 s=0.70702 --> d_error=-0.00059\n",
+      "                         residual sugar<=10.55 s=0.60433 --> d_error=-0.00214\n",
+      "                                 residual sugar<=7.7 s=0.47448 --> d_error=-0.00068\n",
+      "                                         residual sugar<=4.85 s=0.30400 --> d_error=-0.00390\n",
+      "                                                 residual sugar<=2.25 s=0.15659 --> d_error=0.00164\n",
+      "                                                 residual sugar>2.25 s=0.14741 --> d_error=-0.00977\n",
+      "                                         residual sugar>4.85 s=0.17048 --> d_error=0.00505\n",
+      "                                 residual sugar>7.7 s=0.12985 --> d_error=-0.00745\n",
+      "                         residual sugar>10.55 s=0.10269 --> d_error=0.00854\n",
+      "                 residual sugar>13.2 s=0.12087 --> d_error=-0.00856\n",
+      "\n",
+      "chlorides\n",
+      " root s=1.00000 --> d_error=0.00000\n",
+      "         chlorides<=0.037 s=0.31788 --> d_error=-0.00247\n",
+      "                 chlorides<=0.034 s=0.21784 --> d_error=-0.00032\n",
+      "                         chlorides<=0.03 s=0.11515 --> d_error=-0.00113\n",
+      "                         chlorides>0.03 s=0.10269 --> d_error=0.00059\n",
+      "                 chlorides>0.034 s=0.10004 --> d_error=-0.00715\n",
+      "         chlorides>0.037 s=0.68212 --> d_error=0.00115\n",
+      "                 chlorides<=0.04 s=0.10331 --> d_error=0.00840\n",
+      "                 chlorides>0.04 s=0.57881 --> d_error=-0.00014\n",
+      "                         chlorides<=0.053 s=0.41262 --> d_error=-0.00146\n",
+      "                                 chlorides<=0.048 s=0.27950 --> d_error=0.00076\n",
+      "                                         chlorides<=0.044 s=0.13740 --> d_error=-0.00194\n",
+      "                                         chlorides>0.044 s=0.14210 --> d_error=0.00337\n",
+      "                                 chlorides>0.048 s=0.13312 --> d_error=-0.00611\n",
+      "                         chlorides>0.053 s=0.16619 --> d_error=0.00312\n",
+      "\n",
+      "free sulfur dioxide\n",
+      " root s=1.00000 --> d_error=0.00000\n",
+      "         free sulfur dioxide<=28.0 s=0.36974 --> d_error=0.00401\n",
+      "                 free sulfur dioxide<=19.5 s=0.17048 --> d_error=0.00145\n",
+      "                 free sulfur dioxide>19.5 s=0.19927 --> d_error=0.00620\n",
+      "         free sulfur dioxide>28.0 s=0.63026 --> d_error=-0.00235\n",
+      "                 free sulfur dioxide<=49.0 s=0.43998 --> d_error=-0.00557\n",
+      "                         free sulfur dioxide<=35.0 s=0.17783 --> d_error=-0.00268\n",
+      "                         free sulfur dioxide>35.0 s=0.26215 --> d_error=-0.00752\n",
+      "                                 free sulfur dioxide<=43.5 s=0.16211 --> d_error=-0.00902\n",
+      "                                 free sulfur dioxide>43.5 s=0.10004 --> d_error=-0.00511\n",
+      "                 free sulfur dioxide>49.0 s=0.19028 --> d_error=0.00507\n",
+      "\n",
+      "total sulfur dioxide\n",
+      " root s=1.00000 --> d_error=0.00000\n",
+      "         total sulfur dioxide<=123.0 s=0.39853 --> d_error=-0.00455\n",
+      "                 total sulfur dioxide<=112.0 s=0.28971 --> d_error=-0.00122\n",
+      "                         total sulfur dioxide<=98.0 s=0.17395 --> d_error=-0.00592\n",
+      "                         total sulfur dioxide>98.0 s=0.11576 --> d_error=0.00585\n",
+      "                 total sulfur dioxide>112.0 s=0.10882 --> d_error=-0.01344\n",
+      "         total sulfur dioxide>123.0 s=0.60147 --> d_error=0.00302\n",
+      "                 total sulfur dioxide<=180.0 s=0.43181 --> d_error=0.00596\n",
+      "                         total sulfur dioxide<=147.0 s=0.20253 --> d_error=-0.00019\n",
+      "                         total sulfur dioxide>147.0 s=0.22928 --> d_error=0.01140\n",
+      "                                 total sulfur dioxide<=160.0 s=0.10372 --> d_error=0.00831\n",
+      "                                 total sulfur dioxide>160.0 s=0.12556 --> d_error=0.01396\n",
+      "                 total sulfur dioxide>180.0 s=0.16966 --> d_error=-0.00448\n",
+      "\n",
+      "density\n",
+      " root s=1.00000 --> d_error=0.00000\n",
+      "         density<=0.99153 s=0.22479 --> d_error=-0.00805\n",
+      "                 density<=0.99058 s=0.12005 --> d_error=-0.00511\n",
+      "                 density>0.99058 s=0.10474 --> d_error=-0.01141\n",
+      "         density>0.99153 s=0.77521 --> d_error=0.00233\n",
+      "                 density<=0.9972 s=0.60678 --> d_error=0.00488\n",
+      "                         density<=0.99279 s=0.15537 --> d_error=0.00046\n",
+      "                         density>0.99279 s=0.45141 --> d_error=0.00640\n",
+      "                                 density<=0.9954 s=0.29767 --> d_error=0.00869\n",
+      "                                         density<=0.99408 s=0.15843 --> d_error=0.00659\n",
+      "                                         density>0.99408 s=0.13924 --> d_error=0.01108\n",
+      "                                 density>0.9954 s=0.15374 --> d_error=0.00195\n",
+      "                 density>0.9972 s=0.16844 --> d_error=-0.00683\n",
+      "\n",
+      "pH\n",
+      " root s=1.00000 --> d_error=0.00000\n",
+      "         pH<=3.07 s=0.22172 --> d_error=-0.00703\n",
+      "                 pH<=3.0 s=0.10433 --> d_error=-0.00357\n",
+      "                 pH>3.0 s=0.11739 --> d_error=-0.01009\n",
+      "         pH>3.07 s=0.77828 --> d_error=0.00200\n",
+      "                 pH<=3.35 s=0.64230 --> d_error=0.00408\n",
+      "                         pH<=3.14 s=0.18620 --> d_error=0.00991\n",
+      "                         pH>3.14 s=0.45610 --> d_error=0.00170\n",
+      "                                 pH<=3.26 s=0.31503 --> d_error=-0.00170\n",
+      "                                         pH<=3.21 s=0.19171 --> d_error=0.00386\n",
+      "                                         pH>3.21 s=0.12332 --> d_error=-0.01035\n",
+      "                                 pH>3.26 s=0.14108 --> d_error=0.00929\n",
+      "                 pH>3.35 s=0.13597 --> d_error=-0.00780\n",
+      "\n",
+      "sulphates\n",
+      " root s=1.00000 --> d_error=0.00000\n",
+      "         sulphates<=0.39 s=0.20702 --> d_error=-0.00545\n",
+      "                 sulphates<=0.36 s=0.10617 --> d_error=0.00007\n",
+      "                 sulphates>0.36 s=0.10086 --> d_error=-0.01126\n",
+      "         sulphates>0.39 s=0.79298 --> d_error=0.00142\n",
+      "                 sulphates<=0.49 s=0.36443 --> d_error=0.00486\n",
+      "                         sulphates<=0.45 s=0.21294 --> d_error=0.00290\n",
+      "                         sulphates>0.45 s=0.15149 --> d_error=0.00760\n",
+      "                 sulphates>0.49 s=0.42854 --> d_error=-0.00150\n",
+      "                         sulphates<=0.56 s=0.21580 --> d_error=-0.00774\n",
+      "                                 sulphates<=0.52 s=0.11127 --> d_error=-0.00797\n",
+      "                                 sulphates>0.52 s=0.10453 --> d_error=-0.00750\n",
+      "                         sulphates>0.56 s=0.21274 --> d_error=0.00484\n",
+      "                                 sulphates<=0.63 s=0.10780 --> d_error=0.01310\n",
+      "                                 sulphates>0.63 s=0.10494 --> d_error=-0.00364\n",
+      "\n",
+      "alcohol\n",
+      " root s=1.00000 --> d_error=0.00000\n",
+      "         alcohol<=9.2 s=0.17252 --> d_error=-0.00940\n",
+      "         alcohol>9.2 s=0.82748 --> d_error=0.00196\n",
+      "                 alcohol<=10.7 s=0.42977 --> d_error=0.00844\n",
+      "                         alcohol<=9.55 s=0.12168 --> d_error=-0.00189\n",
+      "                         alcohol>9.55 s=0.30808 --> d_error=0.01252\n",
+      "                                 alcohol<=10.0 s=0.13148 --> d_error=0.02506\n",
+      "                                 alcohol>10.0 s=0.17660 --> d_error=0.00318\n",
+      "                 alcohol>10.7 s=0.39771 --> d_error=-0.00505\n",
+      "                         alcohol<=11.2 s=0.11944 --> d_error=-0.00164\n",
+      "                         alcohol>11.2 s=0.27828 --> d_error=-0.00651\n",
+      "                                 alcohol<=12.3333333333333 s=0.17497 --> d_error=-0.00831\n",
+      "                                 alcohol>12.3333333333333 s=0.10331 --> d_error=-0.00345\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "tree_discr.printDiscretizationTrees(round_v =5, show_condition = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "03e9efaa",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-12-23T13:35:46.948732Z",
@@ -2070,9 +2257,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "main-exp",
+   "display_name": "mainexp",
    "language": "python",
-   "name": "main-exp"
+   "name": "mainexp"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2084,7 +2271,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.10.8"
   },
   "toc": {
    "base_numbering": 1,
